--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -4,7 +4,7 @@
 
 .nav {
   width: 100%;
-  max-width: $maxWidth;
+  max-width: 375px;
   padding: 1.6rem 1.3rem;
   position: fixed;
   z-index: 9;
@@ -93,7 +93,13 @@
     border-radius: $borderRadius-2;
   }
 
-  @media (min-width: $largeScreen) {
+
+}
+
+@media (min-width: $largeScreen) {
+  .nav{
+    max-width:$fixedWidth;
+
     .hamburger {
       display: none;
     }
@@ -131,4 +137,6 @@
       }
     }
   }
+
+
 }
